# Simple_Formula_for_solving_quadratic_equations

./: CMakeLists.txt  main.cpp
excerpt/: excerpt.cpp
excerpt/include/: excerpt.h
excerpt/src/: excerpt.cpp
